Added resource for sending letter by CSV. Refactored previous legalId precheck logic. Refactored parts of the API for simplicifation. Removed unused util classes and the respective tests.
